...
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:clipChildren="false">


                <LinearLayout
                    android:id="@+id/scroll_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/layout_drama"
...


                        <ImageView
                            android:id="@+id/img_drama"
                            android:layout_width="120dp"
                            android:layout_height="160dp"
                            android:contentDescription="@string/img_category"
                            android:maxHeight="160dp"
                            android:maxWidth="120dp"
                            android:minHeight="160dp"
                            android:minWidth="120dp" />


...
                            android:textAllCaps="false"
                            android:textColor="#505254" />
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/layout_comedy"
                        android:layout_width="120dp"
                        android:layout_height="190dp"
                        android:orientation="vertical">


                        <ImageView
                            android:id="@+id/img_comedy"
                            android:layout_width="120dp"
                            android:layout_height="160dp"
                            android:contentDescription="@string/img_category"
                            android:maxHeight="160dp"
                            android:maxWidth="120dp"
                            android:minHeight="160dp"
...
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/img_new1"
                            android:layout_width="200dp"
                            android:layout_height="300dp"
                            android:adjustViewBounds="false"
                            android:contentDescription="@string/img_new"
                            android:cropToPadding="false"
                            android:scaleType="fitXY" />
...
