<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <android.support.v7.widget.CardView
        android:layout_width="120dp"
        android:layout_height="190dp"
        app:cardMaxElevation="2dp"
        app:cardElevation="1dp"
        android:layout_centerInParent="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/image_view"
                android:layout_width="120dp"
                android:layout_height="160dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/img_list"
                android:scaleType="centerCrop"
                android:src="@drawable/american" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
