...
    <string name="categorias">Categorías</string>
    <string name="novedades_frase">Últimas películas añadidas</string>
    <string name="comedia">Comedia</string>
    <string name="actores">Descubre más sobre los actores</string>
    <string name="terror">Terror</string>
    <string name="img_popular">img_popular</string>
    <string name="img_new">TODO</string>
    <string name="img_category">img_category</string>
    <string name="drama">Drama</string>
    <string name="descubre_">Descubre</string>
    <string name="title_profile">title_profile</string>
    <string name="username">Raul Velázquez</string>
    <string name="quot_user">Soy aficionado al cine del género de ciencia ficción, me encanta Matriz</string>
...
