<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:design="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.kseniyaturava.mytest.MainActivity"
   ><!-- android:theme="@style/CustomTheme"-->


    <!--inside id added for fragments(there're more options)-->

   <!-- <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/layout_userData"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:baselineAligned="false">

              <!--  <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="130dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    design:srcCompat="@drawable/american" />-->

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/title_profile"
                        android:text="@string/username"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:id="@+id/tvDescription"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:text="@string/qu_te_cuentas"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

            <TabHost
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:theme="@style/TabWidgetTheme">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TabWidget
                        android:id="@android:id/tabs"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/botton_style" />

                    <FrameLayout
                        android:id="@android:id/tabcontent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/tab2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ListView
                                android:id="@+id/listView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:columnWidth="136dp"
                                android:gravity="center"
                                android:horizontalSpacing="1dp"
                                android:numColumns="3"
                                android:stretchMode="spacingWidthUniform"
                                android:verticalSpacing="1dp" />


                        </LinearLayout>


                        <LinearLayout
                            android:id="@+id/tab1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <GridView
                                android:id="@+id/gridView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:columnWidth="136dp"
                                android:gravity="center"
                                android:horizontalSpacing="1dp"
                                android:numColumns="3"
                                android:stretchMode="spacingWidthUniform"
                                android:verticalSpacing="1dp" />

                        </LinearLayout>

                    </FrameLayout>
                </LinearLayout>
            </TabHost>

        </LinearLayout>
   <!-- </ScrollView>-->


    <!--Bottom navigation code-->
    <!--Match-parent is all the screen weight -->


    <FrameLayout
        android:id="@+id/menu_container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/bottomNavigationView"
        android:layout_gravity="bottom"
        android:background="#ffff">

        <!--shadow.xml inside-->
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_gravity="top"
            android:background="@drawable/shadow" />

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            app:menu="@menu/menu_navigation" />
        <!-- android:layout_height="wrap_content"
         ALT+ENTER on design to add namespaces-->
        <!---->
    </FrameLayout>
    <!--</RelativeLayout>-->
</android.support.design.widget.CoordinatorLayout>
